--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     </div>
 
-    <button class="btn btn-yes">Yes</button>
-    <button class="btn btn-no">No</button>
+    <button class="btn btn-yes">Obvio Microbio😎🔥</button>
+    <button class="btn btn-no">No🥺😭</button>
 
     <script src="main.js"></script>
 </html>
